# cognitive-traces

./: .gitignore  CONTRIBUTING.md  DATASETS.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  SETUP.md  cleanup.sh  deploy.sh  docker-compose.yml  start.sh  stop.sh
backend/: Dockerfile  README.md  env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: annotations.py  export.py  models.py  sessions.py
backend/app/core/: __init__.py  config.py
backend/app/schemas/: __init__.py  annotation.py  model.py  session.py
backend/app/services/: __init__.py  annotation_orchestrator.py  annotation_service.py  file_parser.py  llm_agents.py  model_provider.py
data/: .gitkeep  README.md  aol_1k_annotated.csv  movielens_annotator_format.csv  movielens_annotator_format_cognitive_traces.csv  stackoverflow_annotated.csv  stackoverflow_sessions_annotated.csv
data/aol_1k_annotated_logs/: 10008_2260_log.json  10008_2261_log.json  10008_2262_log.json  10008_2263_log.json  10008_2264_log.json  10008_2265_log.json  10008_2266_log.json  10008_2267_log.json  10008_2268_log.json  10008_2269_log.json  10008_2270_log.json  10008_2271_log.json  10008_2272_log.json  10008_2273_log.json  10008_2274_log.json  10008_2275_log.json  (+2203 more)
frontend/: Dockerfile  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
models/: .gitignore  README.md  __init__.py  data_preprocessing.py  dataset.py  evaluate.py  model.py  requirements.txt  run_experiment.sh  test_installation.py  train.py
(+63 files in other folders)
